I changed the errors

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -28,7 +28,12 @@
             <a class="book href=contactus.html">book Now</a>
         </div>
         </section>
-    </div>  
+    </div> 
+    <main  class="home-grid">
+    </main>    
+</body>
+   
+   
     <main  class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
@@ -68,5 +73,4 @@
             </a>
         </div>
     </footer>
-</body>
-</html>
+</html>  
