--- a/wwr/index.html
+++ b/wwr/index.html
@@ -19,7 +19,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero.img", scr="images/hero.png" alt="People enjoying rafting">
+            <img id="hero.img" src="images/hero.png" alt="People enjoying rafting">
         </div>    
         <section id="hero-msg">
         <h1 class="home-title">Have An Adventure</h1>
@@ -29,12 +29,11 @@
         </div>
         </section>
     </div> 
-    <main  class="home-grid">
-    </main>    
+   
 </body>
    
    
-    <main  class="home-grid">
+<main  class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
@@ -46,7 +45,7 @@
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img src=images/rapids.jpg" alt="rafting boat">
+            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
             <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
@@ -56,13 +55,15 @@
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
             <a class="join" href="rivers.html">Join Us</a>
         </section>
-    </main>
-    <footer>
+</main>
+
+
+<footer>
         <p>Dry Oar &copy; 200XX - Your First and LAst Name Here</p>
         <p><a href='site-plan-rafting.html'>Site Plan</a></p>
         <p><a href='contactus.html'>Contact Us</a></p>
         <div class="social">
-            <a hrfe="https://facebook.com">
+            <a href="https://facebook.com">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
             <a href="https//twitter.com">
@@ -72,5 +73,5 @@
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
-    </footer>
+</footer>
 </html>  
