--- a/wwr/index.html
+++ b/wwr/index.html
@@ -56,7 +56,7 @@
 
 
 <footer>
-        <p>Dry Oar &copy; 200XX - Your First and LAst Name Here</p>
+        <p>Dry Oar &copy; 200XX - Yuto Akatsuka</p>
         <p><a href='site-plan-rafting.html'>Site Plan</a></p>
         <p><a href='contactus.html'>Contact Us</a></p>
         <div class="social">
