I finsihed the final whiterafting page

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,7 +14,7 @@
         </a>
         <nav>
             <a href="index.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="camping.html">Camping</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
@@ -39,8 +39,9 @@
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+           <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
+            
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
