--- a/wwr/index.html
+++ b/wwr/index.html
@@ -39,7 +39,9 @@
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-           <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <nav>
+                <a href="camping.html"> <img class="card-img" src="images/camping.jpg" alt="tent in mountains"></a>     
+            </nav>
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
             
             <h2>Camping</h2>
