I change the comment  a bit

--- a/wwr/camping.html
+++ b/wwr/camping.html
@@ -26,6 +26,7 @@
         <section class="description_camping">
             <h1>Camping</h1>
             <p>Discover the thrill of white water rafting and the tranquility of camping all in one unforgettable adventure!</p>
+            <p>You can find the camping site nearby the water white rafting place on that page </p>
         </section>
 
 
