--- a/wwr/camping.html
+++ b/wwr/camping.html
@@ -19,7 +19,7 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-
+    </div>  
     <main>
         <img class="camping-img" src="images/camping.jpg" alt="camping">
         <img class="camping-img2" src="images/camping2.jpg" alt="camping2">
